# DL-inversekinematic

./: .gitignore  1-Robotsimulation-and-DH-Transformation.ipynb  2-Deep Learning Inverse Kinematic-absolut.ipynb  2-Deep Learning Inverse Kinematic-relativ-PyTorch.ipynb  2-Deep Learning Inverse Kinematic-relativ.ipynb  2-Deep Learning Inverse Kinematic.ipynb  3-Deep Learning Inverse Kinematic Evaluation.ipynb  3-Inverse Kinematic-SOM.ipynb  Auslagerung.ipynb  CLAUDE.md  Deep Learning Inverse Kinematic-2.ipynb  Deep Learning Inverse Kinematic-absolut.ipynb  Deep Learning Inverse Kinematic-relativ.ipynb  Deep Learning Inverse Kinematic.ipynb  README.md  environment.yml  model_IK_gauss.h5  pyproject.toml  requirements.txt  test.ipynb  utils.py
checkpoints/: calm-river-2.pt  dainty-sunset-0.pt  eager-mountain-3.pt
experiments/: experiments.md
models/: simple_mlp.pt
src/: datahandler.py  display_latex.py  grokking.py  main.py  metrics.py  normrange.py  robot.py  robot_animation.py  robot_animation_deprecated.py  robot_plot.py  robotsimulation.py  train.py  trainer.py  trajectories.py
src/deprecated/: 2-Deep Learning Inverse Kinematic-absolut.ipynb
src/models/: __init__.py  base.py  checkpoint.py  mlp.py  registry.py  resmlp.py
