[project]
name = "dl-inversekinematic"
version = "0.1.0"
description = "Deep learning approach to solving inverse kinematics for robot manipulators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.9",
    "ipympl>=0.9",
    "tqdm>=4.66",
    "jupyter>=1.0",
    "susi>=1.4",
    "pytransform3d>=3.5",
    "optuna>=3.0",
    "torch",
]
